--- a/setupScripts/apacheConfigSSL.conf
+++ b/setupScripts/apacheConfigSSL.conf
@@ -1,16 +1,16 @@
 <IfModule mod_ssl.c>
 	<VirtualHost _default_:443>
-		ServerName vamso.cioc.in
-		ServerAlias www.vamso.cioc.in
+		ServerName syrow.cioc.in
+		ServerAlias www.syrow.cioc.in
 		ServerAdmin admin@cioc.in
-		DocumentRoot /var/www/vamso
-		WSGIScriptAlias / /var/www/vamso/vamso/wsgi.py
-		Alias /static /var/www/vamso/static_root
-		<Directory /var/www/vamso/static_root>
+		DocumentRoot /var/www/ERP
+		WSGIScriptAlias / /var/www/ERP/ERP/wsgi.py
+		Alias /static /var/www/ERP/static_root
+		<Directory /var/www/ERP/static_root>
 			Require all granted
 		</Directory>
-		Alias /media /var/www/vamso/media_root
-		<Directory /var/www/vamso/media_root>
+		Alias /media /var/www/ERP/media_root
+		<Directory /var/www/ERP/media_root>
 			Require all granted
 		</Directory>
 		ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -22,8 +22,8 @@
 		<Directory /usr/lib/cgi-bin>
 			SSLOptions +StdEnvVars
 		</Directory>
-		SSLCertificateFile	/etc/letsencrypt/live/aiba.cioc.in/fullchain.pem
-		SSLCertificateKeyFile /etc/letsencrypt/live/aiba.cioc.in/privkey.pem
+		SSLCertificateFile	/etc/letsencrypt/live/syrow.cioc.in/fullchain.pem
+		SSLCertificateKeyFile /etc/letsencrypt/live/syrow.cioc.in/privkey.pem
 		Include /etc/letsencrypt/options-ssl-apache.conf
 	</VirtualHost>
 </IfModule>
